care/force-app/main/default/objects/Process_Control_Settings__mdt/Process_Control_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Generic Configuration settings to switch on or off multiple processes like gdpr,retention etc..</description>
    <label>Process Control Settings</label>
    <pluralLabel>Process Control Settings</pluralLabel>
</CustomObject>