care/force-app/main/default/objects/Process_Control_Settings__mdt/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <label>Additional Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sterling User</fullName>
                <default>true</default>
                <label>Sterling User</label>
            </value>
            <value>
                <fullName>Care.com Salesforce Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>