care/force-app/main/default/objects/Process_Control_Settings__mdt/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <description>Describes the process name Ex: GDPR</description>
    <label>Process Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GDPR</fullName>
                <default>true</default>
                <label>GDPR</label>
            </value>
            <value>
                <fullName>GDPR Fail Over</fullName>
            </value>
            <value>
                <fullName>Intl Retention</fullName>
            </value>
            <value>
                <fullName>Intl Retention Fail Over</fullName>
            </value>
            <value>
                <fullName>Intl Retention Batch</fullName>
            </value>
            <value>
                <fullName>Intl Retention Admin Notification</fullName>
            </value>
            <value>
                <fullName>GDPR Admin Notification</fullName>
            </value>
            <value>
                <fullName>GDPR Sterling Sync</fullName>
            </value>
            <value>
                <fullName>Intl Retention Sterling Sync</fullName>
            </value>
            <value>
                <fullName>Update Salesforce Last Action Date</fullName>
            </value>
            <value>
                <fullName>Integration User</fullName>
            </value>
            <value>
                <fullName>CCPA Deletion</fullName>
            </value>
            <value>
                <fullName>CCPA Access Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>