care/force-app/main/default/objects/Process_Control_Settings__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Process_Name__c</columns>
    <columns>Switch__c</columns>
    <columns>Additional_Information__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>